删除openai-java依赖前